--- a/src/main/resources/template/user.html
+++ b/src/main/resources/template/user.html
@@ -75,11 +75,16 @@
                                     <p style="color:red;">＊</p>
                                 </td>
                                 <td>
-                                    <p>例：ティーアイエス　タロウ</p>
-                                    <div class="field" th:classappend="${errors.hasError('kanaName')} ? 'error'">
-                                        <input type="text" name="kanaName" id="kana" th:value="${form.kanaName}"/>
-                                        <p th:if="${errors.hasError('kanaName')}"
-                                           th:text="${errors.getMessage('kanaName')}" class="error-message">
+                                    <div class="field" th:classappend="${errors.hasError('kanaMyoji')} ? 'error'">
+                                        氏: <input type="text" name="kanaMyoji" th:value="${form.kanaMyoji}"/>
+                                        <p th:if="${errors.hasError('kanaMyoji')}"
+                                           th:text="${errors.getMessage('kanaMyoji')}" class="error-message">
+                                        </p>
+                                    </div>
+                                    <div class="field" th:classappend="${errors.hasError('kanaNamae')} ? 'error'">
+                                        名: <input type="text" name="kanaNamae" th:value="${form.kanaNamae}"/>
+                                        <p th:if="${errors.hasError('kanaNamae')}"
+                                           th:text="${errors.getMessage('kanaNamae')}" class="error-message">
                                         </p>
                                     </div>
                                 </td>
@@ -90,11 +95,16 @@
                                     <p style="color:red;">＊</p>
                                 </td>
                                 <td>
-                                    <p>例：TIS TAROU</p>
-                                    <div class="field" th:classappend="${errors.hasError('alphabetName')} ? 'error'">
-                                        <input type="text" name="alphabetName" th:value="${form.alphabetName}" onInput="checkFrom1(this)"/>
-                                        <p th:if="${errors.hasError('alphabetName')}"
-                                           th:text="${errors.getMessage('alphabetName')}" class="error-message">
+                                    <div class="field" th:classappend="${errors.hasError('alphabetMyoji')} ? 'error'">
+                                        氏: <input type="text" name="alphabetMyoji" th:value="${form.alphabetMyoji}"/>
+                                        <p th:if="${errors.hasError('alphabetMyoji')}"
+                                           th:text="${errors.getMessage('alphabetMyoji')}" class="error-message">
+                                        </p>
+                                    </div>
+                                    <div class="field" th:classappend="${errors.hasError('alphabetNamae')} ? 'error'">
+                                        名: <input type="text" name="alphabetNamae" th:value="${form.alphabetNamae}"/>
+                                        <p th:if="${errors.hasError('alphabetNamae')}"
+                                           th:text="${errors.getMessage('alphabetNamae')}" class="error-message">
                                         </p>
                                     </div>
                                 </td>
