名前，電話番号，メールの入力フォームを分割しました．

--- a/src/main/resources/META-INF/resources/css/main.css
+++ b/src/main/resources/META-INF/resources/css/main.css
@@ -48,6 +48,20 @@ ul.label {
     text-align: left;
 }
 
+.numfield {
+    float: left;
+    width: 20%;
+}
+
+.mailfield {
+    float: left;
+    width: 40%;
+}
+
+.str {
+    float: left;
+}
+
 .number {
     text-align: right;
     vertical-align: middle !important;
